# api/openapi.yaml
@@ -1,12 +1,8 @@
 openapi: 3.0.2
 info:
-  title: IBM MarketGen - OpenAPI 3.0
-  description: |-
-    Generative API into Watsonx AI 
-
-    Some useful links:
-    - [The MarketGen repository](https://github.com/IBM-api/IBM-MarketGen)
-    - [The source API definition for the MarketGen](https://github.com/IBM-api/IBM-MarketGen/blob/master/src/main/resources/openapi.yaml)
+  title: IBM generateContent - OpenAPI 3.0
+  description: "API into Watsonx Generative AI \n\nSome useful links:\n- [The watsonAiAgent\
+    \ repository](https://github.com/ncrowther/watsonai_agent)"
   termsOfService: http://IBM.io/terms/
   contact:
     email: apiteam@IBM.io
@@ -15,10 +11,19 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.15
   x-ibm-annotations: "true"
-  x-ibm-application-name: WatsonX Generative AI API
-  x-ibm-application-id: NTC-Generative-AI-service
+  x-ibm-application-name: Watson generative AI Service
+  x-ibm-application-id: -watsonAIgenerative-AI-service
   x-ibm-skill-type: imported
-  x-ibm-application-icon: "<svg width=\"19\" height=\"20\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:space=\"preserve\" overflow=\"hidden\"><defs><clipPath id=\"clip0\"><rect x=\"7\" y=\"370\" width=\"19\" height=\"20\"/></clipPath><image width=\"41\" height=\"42\" xlink:href=\"data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAASABIAAD/4QCMRXhpZgAATU0AKgAAAAgABQESAAMAAAABAAEAAAEaAAUAAAABAAAASgEbAAUAAAABAAAAUgEoAAMAAAABAAIAAIdpAAQAAAABAAAAWgAAAAAAAABIAAAAAQAAAEgAAAABAAOgAQADAAAAAQABAACgAgAEAAAAAQAAACmgAwAEAAAAAQAAACoAAAAA/+0AOFBob3Rvc2hvcCAzLjAAOEJJTQQEAAAAAAAAOEJJTQQlAAAAAAAQ1B2M2Y8AsgTpgAmY7PhCfv/AABEIACoAKQMBIgACEQEDEQH/xAAfAAABBQEBAQEBAQAAAAAAAAAAAQIDBAUGBwgJCgv/xAC1EAACAQMDAgQDBQUEBAAAAX0BAgMABBEFEiExQQYTUWEHInEUMoGRoQgjQrHBFVLR8CQzYnKCCQoWFxgZGiUmJygpKjQ1Njc4OTpDREVGR0hJSlNUVVZXWFlaY2RlZmdoaWpzdHV2d3h5eoOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4eLj5OXm5+jp6vHy8/T19vf4+fr/xAAfAQADAQEBAQEBAQEBAAAAAAAAAQIDBAUGBwgJCgv/xAC1EQACAQIEBAMEBwUEBAABAncAAQIDEQQFITEGEkFRB2FxEyIygQgUQpGhscEJIzNS8BVictEKFiQ04SXxFxgZGiYnKCkqNTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqCg4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2dri4+Tl5ufo6ery8/T19vf4+fr/2wBDAAICAgICAgMCAgMFAwMDBQYFBQUFBggGBgYGBggKCAgICAgICgoKCgoKCgoMDAwMDAwODg4ODg8PDw8PDw8PDw//2wBDAQICAgQEBAcEBAcQCwkLEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBD/3QAEAAP/2gAMAwEAAhEDEQA/AP15vb230+A3Fy21RwB3J9BXG3/jGMadFPassTX15HYwueQruQHfng7AfzpuoW3iPVrm+vtP09LuG2zFbpKxVW2j53AHJJbj6CvMVuob7wjZW2q6XG2nfa7iKYRF457O6MhYlWYsMEEEAj2zXZRw6tdnbFXOh+Jdtq2h+IYYtJvLiBI8f8tGJc+rZPJJr0Xwprn2zXI/B+tttvbqzS9s5u7oVBkicdCyHkHqV68jJ43ULHWb+XS7fVLxdVh2boLhk2TNGnabnBK9yevqa4zTbu+1P4s2OqWt217fabFO5cIEt44kjYBSo9SQPvd+lb8inGz6IpR0PpW6tZrOUwzDnsexHqKrVlaP8QLHxPjSdRjW2vyN0LDISQ91GehPpnrWrmvMqU3F2Zmr9T//0P0l8X+HPEWjzNfaZI1zGfmidG42nkbSDxx0xXL2uua7OstidMjvV1NUe8RnEZebaAX3fwuABz65yOa9YSaexN3oy6m9ogy0MUwVoWV+QEdgSnuCcZ6Y6Vxj+HLWS2klW+RLm4Yjyw4MgA7YBzyec969SDTjqd8J3VmP0d3nt5NJupQ0lsnls0bh2SKYg7XYcBspgkZ47Cq9hJJo+srpFrpv2O1nJa5lzl5I0BYKGH8JI5xRoWmR+ELeeCUO8czM0kxBIyTkZPoOlU9Z8VfY7C5eyIuHVC0O35s+qjHPNSqd21EtnJat4gkTxAl4Iljjhb5fL6Lg5GMen4e1fRH9s3P9z9P/AK1eF/DTTdY8WTtqeu6Q+l2cLFv9JAEsgB4VEHIBPVm7dBnkfR+8+g/KlmFSKag9WjKVuh//0f1y1HTINQUGQfOnQ+3oa8/1fwsY7wXtmfKZgFfHUgf4ivUqa6I6kOoYe4zWuHxEoOx2bao8ObU9R06aSB4y0TcY6g/hXnfh/wAPXc+sXUdnbuUnmLqoy20ZyBzwB619IXEMLkho1I3AcgeldDb28FtCqW8axKRkhQFBP4V6MsX7OGi1Y5u5R0iwbT7RYpW3SH72Og9hWpRRXjSk27sR/9k=\" preserveAspectRatio=\"none\" id=\"img1\"></image><clipPath id=\"clip2\"><path d=\"M7 380C7 374.477 11.2533 370 16.5 370 21.7467 370 26 374.477 26 380 26 385.523 21.7467 390 16.5 390 11.2533 390 7 385.523 7 380Z\" fill-rule=\"evenodd\" clip-rule=\"evenodd\"/></clipPath></defs><g clip-path=\"url(#clip0)\" transform=\"translate(-7 -370)\"><g clip-path=\"url(#clip2)\"><use width=\"100%\" height=\"100%\" xlink:href=\"#img1\" opacity=\"1\" transform=\"matrix(0.463415 0 0 0.47619 7 370)\"></use></g></g></svg>"
+  x-ibm-application-icon: "<svg width=\"19\" height=\"20\" xmlns=\"http://www.w3.org/2000/svg\"\
+    \ xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:space=\"preserve\" overflow=\"\
+    hidden\"><defs><clipPath id=\"clip0\"><rect x=\"7\" y=\"370\" width=\"19\" height=\"\
+    20\"/></clipPath><image width=\"41\" height=\"42\" xlink:href=\"data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAASABIAAD/4QCMRXhpZgAATU0AKgAAAAgABQESAAMAAAABAAEAAAEaAAUAAAABAAAASgEbAAUAAAABAAAAUgEoAAMAAAABAAIAAIdpAAQAAAABAAAAWgAAAAAAAABIAAAAAQAAAEgAAAABAAOgAQADAAAAAQABAACgAgAEAAAAAQAAACmgAwAEAAAAAQAAACoAAAAA/+0AOFBob3Rvc2hvcCAzLjAAOEJJTQQEAAAAAAAAOEJJTQQlAAAAAAAQ1B2M2Y8AsgTpgAmY7PhCfv/AABEIACoAKQMBIgACEQEDEQH/xAAfAAABBQEBAQEBAQAAAAAAAAAAAQIDBAUGBwgJCgv/xAC1EAACAQMDAgQDBQUEBAAAAX0BAgMABBEFEiExQQYTUWEHInEUMoGRoQgjQrHBFVLR8CQzYnKCCQoWFxgZGiUmJygpKjQ1Njc4OTpDREVGR0hJSlNUVVZXWFlaY2RlZmdoaWpzdHV2d3h5eoOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4eLj5OXm5+jp6vHy8/T19vf4+fr/xAAfAQADAQEBAQEBAQEBAAAAAAAAAQIDBAUGBwgJCgv/xAC1EQACAQIEBAMEBwUEBAABAncAAQIDEQQFITEGEkFRB2FxEyIygQgUQpGhscEJIzNS8BVictEKFiQ04SXxFxgZGiYnKCkqNTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqCg4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2dri4+Tl5ufo6ery8/T19vf4+fr/2wBDAAICAgICAgMCAgMFAwMDBQYFBQUFBggGBgYGBggKCAgICAgICgoKCgoKCgoMDAwMDAwODg4ODg8PDw8PDw8PDw//2wBDAQICAgQEBAcEBAcQCwkLEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBD/3QAEAAP/2gAMAwEAAhEDEQA/AP15vb230+A3Fy21RwB3J9BXG3/jGMadFPassTX15HYwueQruQHfng7AfzpuoW3iPVrm+vtP09LuG2zFbpKxVW2j53AHJJbj6CvMVuob7wjZW2q6XG2nfa7iKYRF457O6MhYlWYsMEEEAj2zXZRw6tdnbFXOh+Jdtq2h+IYYtJvLiBI8f8tGJc+rZPJJr0Xwprn2zXI/B+tttvbqzS9s5u7oVBkicdCyHkHqV68jJ43ULHWb+XS7fVLxdVh2boLhk2TNGnabnBK9yevqa4zTbu+1P4s2OqWt217fabFO5cIEt44kjYBSo9SQPvd+lb8inGz6IpR0PpW6tZrOUwzDnsexHqKrVlaP8QLHxPjSdRjW2vyN0LDISQ91GehPpnrWrmvMqU3F2Zmr9T//0P0l8X+HPEWjzNfaZI1zGfmidG42nkbSDxx0xXL2uua7OstidMjvV1NUe8RnEZebaAX3fwuABz65yOa9YSaexN3oy6m9ogy0MUwVoWV+QEdgSnuCcZ6Y6Vxj+HLWS2klW+RLm4Yjyw4MgA7YBzyec969SDTjqd8J3VmP0d3nt5NJupQ0lsnls0bh2SKYg7XYcBspgkZ47Cq9hJJo+srpFrpv2O1nJa5lzl5I0BYKGH8JI5xRoWmR+ELeeCUO8czM0kxBIyTkZPoOlU9Z8VfY7C5eyIuHVC0O35s+qjHPNSqd21EtnJat4gkTxAl4Iljjhb5fL6Lg5GMen4e1fRH9s3P9z9P/AK1eF/DTTdY8WTtqeu6Q+l2cLFv9JAEsgB4VEHIBPVm7dBnkfR+8+g/KlmFSKag9WjKVuh//0f1y1HTINQUGQfOnQ+3oa8/1fwsY7wXtmfKZgFfHUgf4ivUqa6I6kOoYe4zWuHxEoOx2bao8ObU9R06aSB4y0TcY6g/hXnfh/wAPXc+sXUdnbuUnmLqoy20ZyBzwB619IXEMLkho1I3AcgeldDb28FtCqW8axKRkhQFBP4V6MsX7OGi1Y5u5R0iwbT7RYpW3SH72Og9hWpRRXjSk27sR/9k=\"\
+    \ preserveAspectRatio=\"none\" id=\"img1\"></image><clipPath id=\"clip2\"><path\
+    \ d=\"M7 380C7 374.477 11.2533 370 16.5 370 21.7467 370 26 374.477 26 380 26 385.523\
+    \ 21.7467 390 16.5 390 11.2533 390 7 385.523 7 380Z\" fill-rule=\"evenodd\" clip-rule=\"\
+    evenodd\"/></clipPath></defs><g clip-path=\"url(#clip0)\" transform=\"translate(-7\
+    \ -370)\"><g clip-path=\"url(#clip2)\"><use width=\"100%\" height=\"100%\" xlink:href=\"\
+    #img1\" opacity=\"1\" transform=\"matrix(0.463415 0 0 0.47619 7 370)\"></use></g></g></svg>"
 externalDocs:
   description: Find out more about IBM
   url: http://IBM.io
@@ -27,19 +32,19 @@ servers:
 security:
 - basic_auth: []
 tags:
-- name: NTCGenAIServce
-  description: NTC gen AI service 
+- name: watsonAIServce
+  description: Watson AI service
   externalDocs:
     description: Find out more
     url: http://IBM.io
 paths:
-  /gen:
+  /generateContent:
     post:
       tags:
-      - MarketGen
-      summary: NTC Generative AI Service 
-      description: NTC Generative AI Service  
-      operationId: NTCgenAiService
+      - generateContent
+      summary: watson AI Service
+      description: watsonAI Service
+      operationId: generateContent
       parameters:
       - name: projectId
         in: query
@@ -62,21 +67,23 @@ paths:
       - name: min_new_tokens
         in: query
         description: min length of generated text
+        required: false
         style: form
         explode: true
         schema:
           type: integer
           default: 50
       - name: max_new_tokens
-        in: query 
-        description: max length of generated text              
+        in: query
+        description: max length of generated text
+        required: false
         style: form
         explode: true
         schema:
           type: integer
-          default: 200        
+          default: 200
       requestBody:
-        description: Gen AI prompt
+        description: watsonAiAgent AI prompt
         content:
           application/json:
             schema:
@@ -91,6 +98,7 @@ paths:
                 $ref: '#/components/schemas/Response'
         "405":
           description: Invalid input
+      x-swagger-router-controller: GenerateContent
 components:
   schemas:
     Request:
@@ -98,15 +106,15 @@ components:
       properties:
         prompt:
           type: string
-          example: Create a marketing email about ice cream
+          example: Generate content about ice cream
     Response:
       type: object
       properties:
         generated:
           type: string
-          example: buy ice cream  
+          example: buy ice cream
       example:
-        generated: buy ice cream      
+        generated: buy ice cream
   securitySchemes:
     basic_auth:
       type: http
